--- a/ShapesBalanceXamFormsApp/MainPage.xaml
+++ b/ShapesBalanceXamFormsApp/MainPage.xaml
@@ -3,22 +3,280 @@
              xmlns:x="http://schemas.microsoft.com/winfx/2009/xaml"
              x:Class="ShapesBalanceXamFormsApp.MainPage">
 
-    <StackLayout>
-        <Frame BackgroundColor="#2196F3" Padding="24" CornerRadius="0">
-            <Label Text="Welcome to Xamarin.Forms!" HorizontalTextAlignment="Center" TextColor="White" FontSize="36"/>
-        </Frame>
-        <Label Text="Start developing now" FontSize="Title" Padding="30,10,30,10"/>
-        <Label Text="Make changes to your XAML file and save to see your UI update in the running app with XAML Hot Reload. Give it a try!" FontSize="16" Padding="30,0,30,0"/>
-        <Label FontSize="16" Padding="30,24,30,0">
-            <Label.FormattedText>
-                <FormattedString>
-                    <FormattedString.Spans>
-                        <Span Text="Learn more at "/>
-                        <Span Text="https://aka.ms/xamarin-quickstart" FontAttributes="Bold"/>
-                    </FormattedString.Spans>
-                </FormattedString>
-            </Label.FormattedText>
-        </Label>
-    </StackLayout>
+    <!-- Writing Resources for the content page -->
+
+
+  
+
+    <ScrollView>
+        <StackLayout>
+
+
+ 
+            <ContentView  InputTransparent="False" 
+                          IsEnabled="False" 
+                          Opacity="10" 
+                          BackgroundColor="White">
+                <RelativeLayout    HeightRequest="450" WidthRequest="450" BackgroundColor="White" HorizontalOptions="Center" VerticalOptions="Center">
+
+                    <Path Stroke="Red" 
+                          StrokeLineCap="Round" 
+                          StrokeThickness="10">
+
+                        <Path.Data>
+                            <PathGeometry>
+                                <PathGeometry.Figures>
+                                    <PathFigureCollection>
+
+
+
+
+
+
+                                        <PathFigure StartPoint="50,200">
+                                            <PathFigure.Segments>
+                                                <PathSegmentCollection>
+                                                    <ArcSegment Size="150,150"
+                                                                RotationAngle="45"
+                                                                IsLargeArc="False"
+                                                                SweepDirection="Clockwise"
+                                                                Point="100,90" />
+
+
+                                                </PathSegmentCollection>
+
+
+
+                                            </PathFigure.Segments>
+                                        </PathFigure>
+
+
+                                    </PathFigureCollection>
+                                </PathGeometry.Figures>
+                            </PathGeometry>
+                        </Path.Data>
+                    </Path>
+                    <Path Stroke="Yellow" 
+                          StrokeLineCap="Round" 
+                          StrokeThickness="10">
+
+                        <Path.Data>
+                            <PathGeometry>
+                                <PathGeometry.Figures>
+                                    <PathFigureCollection>
+
+
+
+
+
+
+                                        <PathFigure StartPoint="120,75">
+                                            <PathFigure.Segments>
+                                                <PathSegmentCollection>
+                                                    <ArcSegment Size="150,150"
+                                                                RotationAngle="45"
+                                                                IsLargeArc="False"
+                                                                SweepDirection="Clockwise"
+                                                                Point="200,50" />
+
+
+                                                </PathSegmentCollection>
+
+
+
+                                            </PathFigure.Segments>
+                                        </PathFigure>
+
+
+                                    </PathFigureCollection>
+                                </PathGeometry.Figures>
+                            </PathGeometry>
+                        </Path.Data>
+                    </Path>
+                    <Path Stroke="Blue" 
+                          StrokeLineCap="Round" 
+                          StrokeThickness="10">
+
+                        <Path.Data>
+                            <PathGeometry>
+                                <PathGeometry.Figures>
+                                    <PathFigureCollection>
+
+
+
+
+
+
+                                        <PathFigure StartPoint="220,50">
+                                            <PathFigure.Segments>
+                                                <PathSegmentCollection>
+                                                    <ArcSegment Size="150,150"
+                                                                RotationAngle="45"
+                                                                IsLargeArc="False"
+                                                                SweepDirection="Clockwise"
+                                                                Point="350,200" />
+
+
+                                                </PathSegmentCollection>
+
+
+
+                                            </PathFigure.Segments>
+                                        </PathFigure>
+
+
+                                    </PathFigureCollection>
+                                </PathGeometry.Figures>
+                            </PathGeometry>
+                        </Path.Data>
+                    </Path>
+                    <Path Stroke="Gray"
+                          StrokeLineCap="Round"
+                          StrokeThickness="10">
+                        <Path.Data>
+                            <PathGeometry>
+                                <PathGeometry.Figures>
+                                    <PathFigureCollection>
+
+
+
+
+                                        <PathFigure StartPoint="50,220" >
+                                            <PathFigure.Segments>
+                                                <PathSegmentCollection>
+                                                    <ArcSegment Size="150,150"                                                               
+                                                                RotationAngle="90"
+                                                                IsLargeArc="False"
+                                                                SweepDirection="CounterClockwise"
+                                                                Point="200,370" />
+
+                                                </PathSegmentCollection>
+
+
+
+                                            </PathFigure.Segments>
+                                        </PathFigure>
+
+
+
+
+                                    </PathFigureCollection>
+                                </PathGeometry.Figures>
+                            </PathGeometry>
+                        </Path.Data>
+                    </Path>
+                    <Path Stroke="Green"
+                          StrokeLineCap="Round"
+                          StrokeThickness="10">
+                        <Path.Data>
+                            <PathGeometry>
+                                <PathGeometry.Figures>
+                                    <PathFigureCollection>
+
+
+
+
+                                        <PathFigure StartPoint="220,370" >
+                                            <PathFigure.Segments>
+                                                <PathSegmentCollection>
+                                                    <ArcSegment Size="150,150"                                                               
+                                                                RotationAngle="90"
+                                                                IsLargeArc="False"
+                                                                SweepDirection="CounterClockwise"
+                                                                Point="350,220" />
+
+                                                </PathSegmentCollection>
+
+
+
+                                            </PathFigure.Segments>
+                                        </PathFigure>
+
+
+
+
+                                    </PathFigureCollection>
+                                </PathGeometry.Figures>
+                            </PathGeometry>
+                        </Path.Data>
+                    </Path>
+
+
+                    <StackLayout 
+                        VerticalOptions="Center" 
+                        HorizontalOptions="Center"
+                        Orientation="Vertical" 
+                        Spacing="1"  
+                        TranslationY="170">
+
+                        <Grid>
+                            <StackLayout  HorizontalOptions="Center"
+                                Orientation="Horizontal" 
+                                Spacing="1" 
+                                TranslationX="0">
+                                <Grid>
+                                    <Label Text="€"
+                                                                   HorizontalOptions="Start"
+                                                                   VerticalOptions="CenterAndExpand"
+                                                                   FontSize="30"
+                                                                   TranslationY="-10"
+                                                                   TextColor="Black"/>
+                                </Grid>
+                                <Grid>
+                                    <Label Text="3,108"
+                                                                   HorizontalOptions="Center"
+                                                                   VerticalOptions="CenterAndExpand"
+                                                                   FontSize="60"
+                                                                   TextColor="Black"/>
+                                </Grid>
+                                <Grid>
+                                    <Label Text=".56"
+                                                                   HorizontalOptions="Center"
+                                                                   VerticalOptions="CenterAndExpand"
+                                                                   FontSize="35"
+                                                                   TranslationY="-10"
+                                                                   TextColor="Black"/>
+                                </Grid>
+
+
+                            </StackLayout>
+                        </Grid>
+
+
+                        <Grid>
+
+
+                            <Label Text="Account Balance"
+                                                                   HorizontalOptions="Center"
+                                                                   VerticalOptions="CenterAndExpand"
+                                                                   FontSize="20"
+                                                                   TextColor="LightGray"/>
+                        </Grid>
+
+
+                    </StackLayout>
+
+                </RelativeLayout>
+
+
+
+
+
+
+            </ContentView>
+
+
+
+        </StackLayout>
+
+
+
+    </ScrollView>
+
+
+
+
+
+
 
 </ContentPage>
